--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tjkorthal/connect-four",
   "version": "1.0.0",
   "description": "Connect Four based JS game",
-  "main": "./js/connect-four.js",
+  "main": "./js/main.js",
   "dependencies": {},
   "devDependencies": {
     "eslint": "^3.19.0",
@@ -14,7 +14,7 @@
     "tape": "^4.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests/test.js"
   },
   "repository": {
     "type": "git",
